upload old learning notes

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: yossarian0916 blog
+title: 乱笔,留下一奈奈记录
 subtitle: ''
 description: 'personal notes, keep track of learning tech'
 keywords:
