--- a/_config.yml
+++ b/_config.yml
@@ -47,18 +47,12 @@ marked:
     postAsset: true
 relative_link: false
 future: true
+
 highlight:
   enable: true
-  line_number: true
-  auto_detect: false
-  tab_replace: ''
-  wrap: true
-  hljs: false
+  tab_replace: '    '
 prismjs:
   enable: false
-  preprocess: true
-  line_number: true
-  tab_replace: ''
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -91,6 +85,20 @@ updated_option: 'mtime'
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
+
+# Math
+math:
+  katex:
+    css: 'https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css'
+    options:
+      throwOnError: false
+  mathjax:
+    css: 'https://cdn.jsdelivr.net/npm/hexo-math@4.0.0/dist/style.css'
+    options:
+      conversion:
+        display: false
+      tex:
+      svg:
 
 # Include / Exclude file(s)
 ## include:/exclude: options only apply to the 'source/' folder
