--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   "dependencies": {
     "hexo": "^5.0.0",
     "hexo-deployer-git": "^2.1.0",
+    "hexo-filter-emoji": "^2.2.1",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
+    "hexo-generator-search": "^2.4.1",
     "hexo-generator-searchdb": "^1.3.2",
     "hexo-generator-tag": "^1.0.0",
     "hexo-math": "^4.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^3.0.0",
     "hexo-renderer-stylus": "^2.0.0",
-    "hexo-server": "^2.0.0"
+    "hexo-server": "^2.0.0",
+    "hexo-theme-cake": "^3.3.0"
   }
 }
