--- a/_config.yml
+++ b/_config.yml
@@ -131,3 +131,16 @@ emoji:
   styles:
   customEmojies:
 
+# Moon-menu
+moon_menu:
+  back2top:
+    enable: true
+    icon: fas fa-chevron-up
+    func: back2top
+    order: -1
+  back2bottom:
+    enable: true
+    icon: fas fa-chevron-down
+    func: back2bottom
+    order: -2
+
