--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@1v9/hexo-next-nightmode": "git+https://github.com/1v9/hexo-next-nightmode.git",
     "hexo": "^5.3.0",
+    "hexo-asset-link": "^2.1.0",
     "hexo-cake-moon-menu": "^2.3.3",
     "hexo-deployer-git": "^2.1.0",
     "hexo-filter-emoji": "^2.2.1",
@@ -21,11 +22,11 @@
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-search": "^2.4.1",
-    "hexo-generator-searchdb": "^1.3.2",
+    "hexo-generator-searchdb": "^1.3.3",
     "hexo-generator-tag": "^1.0.0",
     "hexo-math": "^4.0.0",
     "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^3.0.0",
+    "hexo-renderer-marked": "^3.3.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
     "hexo-theme-cake": "^3.3.0",
