--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,21 @@
 ## Docs: https://hexo.io/docs/configuration.html
 ## Source: https://github.com/hexojs/hexo/
 
-# Site
+# -------------#
+#     Site     #
+# -------------#
 title: 乱笔
 subtitle: ''
-description: 'personal notes, keep track of learning tech'
-keywords:
+description: '个人博客, 学习，记录'
+keywords: yossarian42
 author: Yossarian42
 language: en
 timezone: Asia/Shanghai
+encoding: 'utf-8'
 
-# URL
+# -------------#
+#      URL     #
+# -------------#
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
 url: https://yossarian0916.github.io
 root: /
@@ -81,12 +86,16 @@ time_format: HH:mm:ss
 ## updated_option supports 'mtime', 'date', 'empty'
 updated_option: 'mtime'
 
-# Pagination
+# -------------#
+#  Pagination  #
+# -------------#
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
 
-# Math
+# -------------#
+#      Math    #
+# -------------#
 math:
   katex:
     css: 'https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css'
@@ -100,7 +109,9 @@ math:
       tex:
       svg:
 
-# Search
+# -------------#
+#    Search    #
+# -------------#
 search:
     path: search.json
     field: post
@@ -112,12 +123,16 @@ include:
 exclude:
 ignore:
 
-# Extensions
+# -------------#
+#  Extensions  #
+# -------------#
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: next
 
-# Deployment
+# -------------#
+#  Deployment  #
+# -------------#
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
