--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "5.3.0"
+    "version": "5.4.0"
   },
   "dependencies": {
     "@1v9/hexo-next-nightmode": "git+https://github.com/1v9/hexo-next-nightmode.git",
-    "hexo": "^5.3.0",
+    "hexo": "^5.4.0",
     "hexo-asset-link": "^2.1.0",
     "hexo-cake-moon-menu": "^2.3.3",
-    "hexo-deployer-git": "^2.1.0",
+    "hexo-deployer-git": "^3.0.0",
     "hexo-filter-emoji": "^2.2.2",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
@@ -30,6 +30,7 @@
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
     "hexo-theme-cake": "^3.3.0",
+    "hexo-theme-next": "^8.7.0",
     "install": "^0.13.0",
     "medium-zoom": "^1.0.6"
   }
